--- a/src/Web_page/website/templates/sign_up.html
+++ b/src/Web_page/website/templates/sign_up.html
@@ -1,5 +1,8 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
-content %}
+{% extends "base.html" %}
+
+{% block title %}Sign Up{% endblock %}
+
+{% block content %}
 <form method="POST">
   <h3 align="center">Sign Up</h3>
   <div class="form-group">
@@ -40,6 +43,16 @@ content %}
       id="password2"
       name="password2"
       placeholder="Confirm password"
+    />
+  </div>
+  <div class="form-group">
+    <label for="verification_code">Verification Code</label>
+    <input
+      type="text"
+      class="form-control"
+      id="verification_code"
+      name="verification_code"
+      placeholder="Enter Verification Code"
     />
   </div>
   <br />
