--- a/src/Web_page/website/templates/login.html
+++ b/src/Web_page/website/templates/login.html
@@ -22,6 +22,16 @@
       placeholder="Enter password"
     />
   </div>
+  <div class="form-group">
+    <label for="2fa_code">2FA Code</label>
+    <input
+      type="2fa_code"
+      class="form-control"
+      id="2fa_code"
+      name="2fa_code"
+      placeholder="Enter 2FA Code"
+    />
+  </div>
   <br />
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
