--- a/src/Web_page/website/templates/car_menu.html
+++ b/src/Web_page/website/templates/car_menu.html
@@ -81,7 +81,9 @@
         <div class="status-container">
             <div>
                 <h3>Car Temperature:</h3>
-                <p id="carTemperature">{{ current_temperature }}°C</p>
+                <button onclick="viewTemperature()">View</button>
+                <p id="carTemperature"></p>
+                
             </div>
             <div>
                 <h3>Fuel Level:</h3>
@@ -97,8 +99,8 @@
             <div class="lock-buttons">
                 <h3>Car Door</h3>
                 <form method="post" action="{{ url_for('views.lock_unlock_door') }}">
-                    <button type="submit" name="action" value="lock"  id="lockButton" class="selected" onclick="toggleLock('lock')">Lock</button>
-                    <button type="submit" name="action" value="unlock" id="unlockButton"onclick="toggleLock('unlock')">Unlock</button>
+                    <button type="submit" name="action" value="lock" id="lockButton" class="selected" onclick="toggleLock('lock')">Lock</button>
+                    <button type="submit" name="action" value="unlock" id="unlockButton" onclick="toggleLock('unlock')">Unlock</button>
                 </form>
             </div>
 
@@ -113,7 +115,7 @@
     </div>
 
     <script>
-        function fetchTemperature() {
+        function viewTemperature() {
             fetch('/get_temperature')
                 .then(response => response.json())
                 .then(data => {
@@ -127,8 +129,6 @@
                 .catch(error => console.error('Error fetching temperature:', error));
         }
 
-        setInterval(fetchTemperature, 5000);  // Fetch temperature every 5 seconds
-
         let isLocked = false;
 
         // Load the air conditioning temperature from local storage on startup
@@ -139,8 +139,8 @@
                 document.getElementById('airconTemperature').innerText = `${savedTemperature}°C`;
             }
         });
-        
+
     </script>
 </body>
 </html>
-{% endblock %}  
+{% endblock %}
